Changed the name

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
 <body>
 
-<p>Translate english on klingon.</p>
+<p>Translator from English to Klingon! On angular js</p>
 
 <div ng-app="myApp" ng-controller="myCtrl">
 
